# Federated-Social-Media-Group-Project

./: .gitignore  .gitlab-ci.yml  README.md  deploy.sh  deploy_backend.sh  deploy_frontend.sh  tmux.sh
.ssh/: id_rsa
actix/: .env  Cargo.toml  private_key.der  public_key.pem  sshTunnel.sh
actix/auth_macro/: Cargo.toml
actix/auth_macro/src/: lib.rs
actix/sql/: schema.sql
actix/src/: auth.rs  id_extractor.rs  main.rs  public_key.pem
actix/src/comments/: comments.rs  mod.rs  routes.rs
actix/src/digital_signing/: mod.rs  proxy_req.rs  request.rs  response.rs  util.rs
actix/src/forums/: forums.rs  model.rs  routes.rs
actix/src/posts/: model.rs  posts.rs  routes.rs
actix/src/users/: routes.rs  user.rs
backend/: .env  Cargo.toml
backend/casbin/: model.conf
backend/sql/: schema.sql
backend/src/: auth.rs  id_extractor.rs  implementation_id_extractor.rs  main.rs  request_errors.rs
backend/src/casbin/: casbin_enforcer.rs  mod.rs  model.rs  routes.rs
backend/src/chat/: mod.rs  routes.rs  server.rs
backend/src/comments/: model.rs  routes.rs
backend/src/digital_signing/: mod.rs  proxy_req.rs  request.rs  util.rs
backend/src/forums/: forums.rs  mod.rs  model.rs  routes.rs
backend/src/implementations/: model.rs  routes.rs
backend/src/middlewares/: authentication.rs  mod.rs  protect_local.rs  proxy_req.rs  request.rs  response.rs  util.rs
backend/src/posts/: mod.rs  model.rs  routes.rs
backend/src/users/: mod.rs  model.rs  routes.rs  user.rs
backend/src/voting/: model.rs  routes.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: AdminDropDown.js  BackButton.js  Chat.js  Comments.js  CreateComment.js  CreateForum.js  CreatePost.js  CreateSubforum.js  EditComment.js  EditPost.js  ForumCard.js  (+8 more)
react-front-end/: .gitignore  package-lock.json  package.json
react-front-end/src/: App.js  InputField.js  LoginForm.js  SubmitButton.js  index.js
(+78 files in other folders)
