[package]
name = "actix"
version = "0.1.0"
authors = ["CynicalCode21 <darrencaldwell00@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2"
actix-files = "*"
actix-web-httpauth = "*"
sqlx = { version = "0.4.0", default-features = false, features = [ "runtime-actix-rustls", "macros", "mysql", "json" ] }
futures-util = "0.3.7"
dotenv = "0.15.0"
serde = "*"
chrono = "*"
anyhow = "*"
env_logger = "*"
futures = "*"
serde_json = "*"
bcrypt = "*"
jsonwebtoken = "*"
auth_macro = { path = "auth_macro" }
