[package]
name = "actix"
version = "0.1.0"
authors = ["CynicalCode21 <darrencaldwell00@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2"
actix-files = "0.5"
actix-cors = "0.5.4"
actix-web-httpauth = "0.5"
sqlx = { version = "0.4.0", default-features = false, features = [ "runtime-actix-rustls", "macros", "mysql", "json", "uuid" ] }
futures-util = "0.3.7"
dotenv = "0.15.0"
serde = "1.0"
chrono = "0.4"
anyhow = "1.0"
env_logger = "0.8"
futures = "0.3"
serde_json = "1.0"
bcrypt = "0.9"
jsonwebtoken = "7.2"
auth_macro = { path = "auth_macro" }
actix-service = "1.0.6"
ring = "0.16"
